[tool.poetry]
name = "uwbins-viewer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rerun-sdk = "0.21.0"
pandas = "^2.2.3"
numpy = "1.26.2"
pyserial = "^3.5"
toml = "^0.10.2"
matplotlib = "^3.10.1"
scipy = "^1.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"uwbins" = "uwbins_viewer.__main__:main"